Closes #498: Added support for bundles .withParent translations

--- a/dataverse-webapp/src/main/resources/journal_en.properties
+++ b/dataverse-webapp/src/main/resources/journal_en.properties
@@ -1,13 +1,12 @@
 metadatablock.name=journal
 metadatablock.displayName=Journal Metadata
 datasetfieldtype.journalVolumeIssue.title=Journal
-datasetfieldtype.journalVolumeIssue.withParent.title=
 datasetfieldtype.journalVolume.title=Volume
+datasetfieldtype.journalVolume.withParent.title=
 datasetfieldtype.journalIssue.title=Issue
+datasetfieldtype.journalIssue.withParent.title=
 datasetfieldtype.journalPubDate.title=Publication Date
-datasetfieldtype.journalPubDate.withParent.title=
 datasetfieldtype.journalArticleType.title=Type of Article
-datasetfieldtype.journalArticleType.withParent.title=
 datasetfieldtype.journalVolumeIssue.description=Indicates the volume, issue and date of a journal, which this Dataset is associated with.
 datasetfieldtype.journalVolume.description=The journal volume which this Dataset is associated with (e.g., Volume 4).
 datasetfieldtype.journalIssue.description=The journal issue number which this Dataset is associated with (e.g., Number 2, Autumn).
