--- a/dataverse-webapp/src/main/resources/astrophysics_pl.properties
+++ b/dataverse-webapp/src/main/resources/astrophysics_pl.properties
@@ -1,13 +1,9 @@
 metadatablock.name=astrophysics
 metadatablock.displayName=Astronomia i astrofizyka
 datasetfieldtype.astroType.title=Typ
-datasetfieldtype.astroType.withParent.title=
 datasetfieldtype.astroFacility.title=Miejsce
-datasetfieldtype.astroFacility.withParent.title=
 datasetfieldtype.astroInstrument.title=Instrument
-datasetfieldtype.astroInstrument.withParent.title=
 datasetfieldtype.astroObject.title=Obiekt
-datasetfieldtype.astroObject.withParent.title=
 datasetfieldtype.resolution.Spatial.title=Rozdzielczo\u015B\u0107 przestrzenna
 datasetfieldtype.resolution.Spectral.title=Rozdzielczo\u015B\u0107 spektralna
 datasetfieldtype.resolution.Temporal.title=Rozdzielczo\u015B\u0107 czasowa
@@ -15,10 +11,14 @@ datasetfieldtype.coverage.Spectral.Bandpass.title=Pasmo przepustowe
 datasetfieldtype.coverage.Spectral.CentralWavelength.title=Centralna d\u0142ugo\u015B\u0107 fali
 datasetfieldtype.coverage.Spectral.Wavelength.title=Zakres d\u0142ugo\u015Bci fali
 datasetfieldtype.coverage.Spectral.MinimumWavelength.title=Minimalna [m]
+datasetfieldtype.coverage.Spectral.MinimumWavelength.withParent.title=Zakres d\u0142ugo\u015Bci fali - minimum
 datasetfieldtype.coverage.Spectral.MaximumWavelength.title=Maksymalna [m]
+datasetfieldtype.coverage.Spectral.MaximumWavelength.withParent.title=Zakres d\u0142ugo\u015Bci fali - maksimum 
 datasetfieldtype.coverage.Temporal.title=Zakres czasowy zbioru danych
 datasetfieldtype.coverage.Temporal.StartTime.title=Data rozpocz\u0119cia
+datasetfieldtype.coverage.Temporal.StartTime.withParent.title=Zakres czasowy zbioru danych - Data rozpocz\u0119cia
 datasetfieldtype.coverage.Temporal.StopTime.title=Data zako\u0144czenia
+datasetfieldtype.coverage.Temporal.StopTime.withParent.title=Zakres czasowy zbioru danych - Data zako\u0144czenia
 datasetfieldtype.coverage.Spatial.title=Pokrycie nieba
 datasetfieldtype.coverage.Depth.title=Zakres g\u0142\u0119boko\u015Bci
 datasetfieldtype.coverage.ObjectDensity.title=Zag\u0119szczenie obiekt\u00F3w
@@ -29,7 +29,9 @@ datasetfieldtype.redshiftType.title=Rodzaj przesuni\u0119cia ku czerwieni
 datasetfieldtype.resolution.Redshift.title=Rozdzielczo\u015B\u0107 przesuni\u0119cia ku czerwieni
 datasetfieldtype.coverage.RedshiftValue.title=Warto\u015B\u0107 przesuni\u0119cia ku czerwieni
 datasetfieldtype.coverage.Redshift.MinimumValue.title=Minimalna
+datasetfieldtype.coverage.Redshift.MinimumValue.withParent.title=Warto\u015B\u0107 przesuni\u0119cia ku czerwieni - minimum
 datasetfieldtype.coverage.Redshift.MaximumValue.title=Maksymalna
+datasetfieldtype.coverage.Redshift.MaximumValue.withParent.title=Warto\u015B\u0107 przesuni\u0105ia ku czerwieni - maksimum
 datasetfieldtype.astroType.description=Charakter lub rodzaj zawarto\u015Bci plik\u00F3w w zbiorze danych.
 datasetfieldtype.astroFacility.description=Obserwatorium lub miejsce, w kt\u00F3rym pozyskano dane.
 datasetfieldtype.astroInstrument.description=Instrument wykorzystany do zebrania danych.
