--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -245,6 +245,7 @@ user.position=Position
 user.position.tip=Your role or title at the organization you are affiliated with; such as staff, faculty, student, etc.
 user.notificationsLanguage=E-mail notifications language
 user.notificationsLanguage.tip=Preferred language of system notifications sent via e-mail.
+user.notificationsLanguage.selectItem=Select language
 user.notificationsLanguage.notSupported=(Unsupported. E-mails are sent in English.)
 user.acccountterms=General Terms of Use
 user.acccountterms.tip=The terms and conditions for using the application and services.
