--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -247,6 +247,7 @@ user.notificationsLanguage=E-mail notifications language
 user.notificationsLanguage.tip=Preferred language of system notifications sent via e-mail.
 user.notificationsLanguage.selectItem=Select language
 user.notificationsLanguage.notSupported=(Unsupported. E-mails are sent in English.)
+user.notificationsLanguage.requiredMessage=Please select preferred language.
 user.acccountterms=General Terms of Use
 user.acccountterms.tip=The terms and conditions for using the application and services.
 user.acccountterms.required=Please check the box to indicate your acceptance of the General Terms of Use.
