--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -247,6 +247,7 @@ user.notificationsLanguage=J\u0119zyk powiadomie\u0144 e-mailowych
 user.notificationsLanguage.tip=Preferowany j\u0119zyk powiadomie\u0144 systemowych wysy\u0142anych poczt\u0105 elektroniczn\u0105.
 user.notificationsLanguage.selectItem=Wybierz j\u0119zyk
 user.notificationsLanguage.notSupported=(Nieobs\u0142ugiwany. E-maile wysy\u0142ane s\u0105 w j\u0119zyku angielskim.)
+user.notificationsLanguage.requiredMessage=Wybierz preferowany j\u0119zyk powiadomie\u0144.
 user.acccountterms=Regulamin serwisu
 user.acccountterms.tip=Regulamin serwisu opisuje warunki i zasady korzystania z repozytorium.
 user.acccountterms.required=Zaznacz to pole, by potwierdzi\u0107, \u017Ce akceptujesz "Regulamin serwisu".
