--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -201,7 +201,7 @@ notification.dataverse.management.title=Dataverse Management - Dataverse User Gu
 notification.createDataset={0} was created in {1}. To learn more about what you can do with a dataset, check out the {2}.
 notification.dataset.management.title=Dataset Management - Dataset User Guide
 notification.wasSubmittedForReview={0} was submitted for review to be published in {1}. Don''t forget to publish it or send it back to the contributor, {2} ({3})\!
-notification.wasReturnedByReviewer={0} was returned by the curator of {1}.
+notification.wasReturnedByReviewer={0} was returned by the curator of {1}. Return reason: {2}
 notification.wasPublished={0} was published in {1}.
 notification.worldMap.added={0}, dataset had WorldMap layer data added to it.
 notification.maplayer.deletefailed=Failed to delete the map layer associated with the restricted file {0} from WorldMap. Please try again, or contact WorldMap and/or Dataverse support. (Dataset: {1})
@@ -652,6 +652,7 @@ notification.email.createDataverse=Your new dataverse named {0} (view at {1}) wa
 notification.email.createDataset=Your new dataset named {0} (view at {1} ) was created in {2} (view at {3} ). To learn more about what you can do with a dataset, check out the Dataset Management - User Guide at {4}/{5}/user/dataset-management.html .
 notification.email.wasSubmittedForReview={0} (view at {1}) was submitted for review to be published in {2} (view at {3}). Don''t forget to publish it or send it back to the contributor, {4} ({5})\!
 notification.email.wasReturnedByReviewer={0} (view at {1}) was returned by the curator of {2} (view at {3}).
+notification.email.wasReturnedByReviewer.returnTitle=Return reason: 
 notification.email.wasPublished={0} (view at {1}) was published in {2} (view at {3}).
 notification.email.worldMap.added={0} (view at {1}) had WorldMap layer data added to it.
 notification.email.closing=\n\nYou may contact us for support at {0}.\n\nThank you,\n{1}
