--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -201,7 +201,7 @@ notification.dataverse.management.title=Zarz\u0105dzanie kolekcj\u0105. Przewodn
 notification.createDataset=Zbi\u00F3r danych "{0}" zosta\u0142 utworzony w "{1}". By dowiedzie\u0107 si\u0119 wi\u0119cej na temat tego, co mo\u017Cesz zrobi\u0107 ze swoim zbiorem danych, sprawd\u017A {2}.
 notification.dataset.management.title=Zarz\u0105dzanie zbiorem danych. Przewodnik u\u017Cytkownika zbioru danych
 notification.wasSubmittedForReview=Zbi\u00F3r danych "{0}" zosta\u0142 przes\u0142any do weryfikacji przed opublikowaniem w "{1}". Nie zapomnij go opublikowa\u0107 lub zwr\u00F3ci\u0107 do poprawy do: {2}, ({3}).
-notification.wasReturnedByReviewer=Zbi\u00F3r danych "{0}" zosta\u0142 zwr\u00F3cony do poprawy przed opublikowaniem w "{1}".
+notification.wasReturnedByReviewer=Zbi\u00F3r danych "{0}" zosta\u0142 zwr\u00F3cony do poprawy przed opublikowaniem w "{1}". Pow\u00F3d odrzucenia: {2}
 notification.wasPublished={0} zosta\u0142 opublikowany w {1}.
 notification.worldMap.added=Do zbioru danych danych "{0}" zosta\u0142a dodana warstwa WorldMap.
 notification.maplayer.deletefailed=Nie uda\u0142o si\u0119 usun\u0105\u0107 z WorldMap warstwy mapy powi\u0105zanej z zastrze\u017Conym plikiem "{0}". Spr\u00F3buj ponownie lub skontaktuj si\u0119 z WorldMap i/lub pomoc\u0105 techniczn\u0105 repozytorium. (Zbi\u00F3r danych: {1}).
@@ -650,6 +650,7 @@ notification.email.createDataverse=Twoja nowa kolekcja o nazwie {0} (zobacz na s
 notification.email.createDataset=Tw\u00F3j nowy zbi\u00F3r danych o nazwie {0} (zobacz na stronie {1}) zosta\u0142 stworzony w {2} (zobacz na stronie {3}). Aby dowiedzie\u0107 si\u0119 wi\u0119cej, co mo\u017Cna robi\u0107 ze zbiorem danych, zapoznaj si\u0119 z rozdzia\u0142em "Zarz\u0105dzanie zbiorem danych" w "Poradniku u\u017Cytkownika" na stronie {4}/{5}/user/dataset-management.html.
 notification.email.wasSubmittedForReview="{0}" (zobacz na stronie {1}) zosta\u0142 przekazany do weryfikacji przed przed publikacj\u0105 w {2} (zobacz na stronie {3}). Nie zapomnij go opublikowa\u0107 lub odes\u0142a\u0107 do osoby deponuj\u0105cej, kt\u00F3r\u0105 jest {4} ({5})\.
 notification.email.wasReturnedByReviewer={0} (zobacz na stronie {1}) zosta\u0142 zwr\u00F3cony przez opiekuna kolekcji {2} (zobacz na stronie {3}).
+notification.email.wasReturnedByReviewer.returnTitle=Pow\u00F3d odrzucenia: 
 notification.email.wasPublished={0} (zobacz na stronie {1}) zosta\u0142 opublikowany w {2} (zobacz na stronie {3}).
 notification.email.worldMap.added=Do {0} (zobacz na stronie {1}) dodano dane warstwy WorldMap.
 notification.email.closing=\n\nMo\u017Cesz zwr\u00F3ci\u0107 si\u0119 do nas o pomoc pisz\u0105c na adres {0}.\n\nDzi\u0119kujemy,\n{1}
