--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -1270,7 +1270,7 @@ metrics.peryear=Per year
 metrics.newDatasets=New datasets
 dataset.publish.btn=Publish
 dataset.publish.header=Publish Dataset
-dataset.rejectBtn=Return to Author
+dataset.rejectBtn=Return for modification
 dataset.submitBtn=Submit for Review
 dataset.disabledSubmittedBtn=Submitted for Review
 dataset.submitMessage=You will not be able to make changes to this dataset while it is in review.
@@ -1280,10 +1280,10 @@ dataset.submit.failure=Dataset Submission Failed - {0}
 dataset.submit.failure.null=Can't submit for review. Dataset is null.
 dataset.submit.failure.isReleased=Latest version of dataset is already released. Only draft versions can be submitted for review.
 dataset.submit.failure.inReview=You cannot submit this dataset for review because it is already in review.
-dataset.rejectMessage=Return this dataset to contributor for modification.
 dataset.rejectWatermark=Please enter a reason for returning this dataset to its author(s).
-dataset.reject.enterReason=Reason for return to author is required
 dataset.reject.enterReason.header=Required entry
+dataset.reject.enterReason.empty=Provide rejection reason.
+dataset.reject.messageBox.label=Additional information:
 dataset.reject.success=This dataset has been sent back to the contributor.
 dataset.reject.failure=Dataset Submission Return Failed - {0}
 dataset.reject.datasetNull=Cannot return the dataset to the author(s) because it is null.
