--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -1272,7 +1272,7 @@ metrics.peryear=Rocznie
 metrics.newDatasets=Nowe zbiory danych
 dataset.publish.btn=Opublikuj
 dataset.publish.header=Opublikuj zbi\u00F3r danych
-dataset.rejectBtn=Zwr\u00F3\u0107 do autora
+dataset.rejectBtn=Zwr\u00F3\u0107 do poprawy
 dataset.submitBtn=Przeka\u017C do weryfikacji
 dataset.disabledSubmittedBtn=Przekazany do weryfikacji
 dataset.submitMessage=W czasie gdy ten zbi\u00F3r danych b\u0119dzie weryfikowany, nie b\u0119dzie mo\u017Cna dokona\u0107 w nim \u017Cadnych zmian.
@@ -1282,10 +1282,10 @@ dataset.submit.failure=Nie uda\u0142o si\u0119 przekaza\u0107 zbioru danych - {0
 dataset.submit.failure.null=Nie mo\u017Cna przekaza\u0107 do weryfikacji. Zbi\u00F3r danych jest nullem.
 dataset.submit.failure.isReleased=Najnowsza wersja zbioru danych zosta\u0142a ju\u017C opublikowana. Do weryfikacji mo\u017Cna przekaza\u0107 tylko wersje robocze.
 dataset.submit.failure.inReview=Nie mo\u017Cna przekaza\u0107 do do weryfikacji tego zbioru danych poniewa\u017C jest on ju\u017C weryfikowany.
-dataset.rejectMessage=Zwr\u00F3\u0107 ten zbi\u00F3r danych do poprawy.
 dataset.rejectWatermark=Wprowad\u017A pow\u00F3d zwr\u00F3cenia tego zbioru danych do poprawy.
-dataset.reject.enterReason=Podanie powodu dla kt\u00F3rego zbi\u00F3r ma zosta\u0107 zwr\u00F3cony do poprawy jest wymagane.
 dataset.reject.enterReason.header=Pole wymagane
+dataset.reject.enterReason.empty=Podaj pow\u00F3d odrzucenia.
+dataset.reject.messageBox.label=Dodatkowe informacje:
 dataset.reject.success=Ten zbi\u00F3r danych zosta\u0142 zwr\u00F3cony do poprawy.
 dataset.reject.failure=Nie uda\u0142o si\u0119 zwr\u00F3ci\u0107 zbioru danych - {0}
 dataset.reject.datasetNull=Nie mo\u017Cna zwr\u00F3ci\u0107 tego zbioru danych autorowi, poniewa\u017C jest nullem.
