--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -1281,9 +1281,11 @@ dataset.submit.failure.null=Can't submit for review. Dataset is null.
 dataset.submit.failure.isReleased=Latest version of dataset is already released. Only draft versions can be submitted for review.
 dataset.submit.failure.inReview=You cannot submit this dataset for review because it is already in review.
 dataset.rejectWatermark=Please enter a reason for returning this dataset to its author(s).
+dataset.reject.enterReason=Reason for return to author is required
 dataset.reject.enterReason.header=Required entry
 dataset.reject.enterReason.empty=Provide rejection reason.
 dataset.reject.messageBox.label=Additional information:
+dataset.reject.messageBox.counter={0} characters remaining.
 dataset.reject.success=This dataset has been sent back to the contributor.
 dataset.reject.failure=Dataset Submission Return Failed - {0}
 dataset.reject.datasetNull=Cannot return the dataset to the author(s) because it is null.
