--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -1283,9 +1283,11 @@ dataset.submit.failure.null=Nie mo\u017Cna przekaza\u0107 do weryfikacji. Zbi\u0
 dataset.submit.failure.isReleased=Najnowsza wersja zbioru danych zosta\u0142a ju\u017C opublikowana. Do weryfikacji mo\u017Cna przekaza\u0107 tylko wersje robocze.
 dataset.submit.failure.inReview=Nie mo\u017Cna przekaza\u0107 do do weryfikacji tego zbioru danych poniewa\u017C jest on ju\u017C weryfikowany.
 dataset.rejectWatermark=Wprowad\u017A pow\u00F3d zwr\u00F3cenia tego zbioru danych do poprawy.
+dataset.reject.enterReason=Podanie powodu dla kt\u00F3rego zbi\u00F3r ma zosta\u0107 zwr\u00F3cony do poprawy jest wymagane.
 dataset.reject.enterReason.header=Pole wymagane
 dataset.reject.enterReason.empty=Podaj pow\u00F3d odrzucenia.
 dataset.reject.messageBox.label=Dodatkowe informacje:
+dataset.reject.messageBox.counter=Limit znak\u00F3w: {0}
 dataset.reject.success=Ten zbi\u00F3r danych zosta\u0142 zwr\u00F3cony do poprawy.
 dataset.reject.failure=Nie uda\u0142o si\u0119 zwr\u00F3ci\u0107 zbioru danych - {0}
 dataset.reject.datasetNull=Nie mo\u017Cna zwr\u00F3ci\u0107 tego zbioru danych autorowi, poniewa\u017C jest nullem.
@@ -2475,4 +2477,5 @@ facets.search.fieldtype.journalArticleType_ss.label=Typ artyku\u0142u
 facets.search.fieldtype.fileTypeGroupFacet.label=Typ pliku
 facets.search.fieldtype.fileAccess.label=Dost\u0119p
 dataset.versionUI.published=Opublikowany
+
 
