--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -1263,12 +1263,14 @@ metrics.month-9=September
 metrics.month-10=October
 metrics.month-11=November
 metrics.month-12=December
-metrics.datasets=Datasets
+metrics.chart.legend.label.publishedDatasets=Datasets
+metrics.chart.legend.label.authenticatedUsers=Users
+metrics.chart.title.publishedDatasets=New datasets
+metrics.chart.title.authenticatedUsers=New users
 metrics.month=Month
 metrics.year=Year
 metrics.permonth=Per month
 metrics.peryear=Per year
-metrics.newDatasets=New datasets
 dataset.publish.btn=Publish
 dataset.publish.header=Publish Dataset
 dataset.rejectBtn=Return for modification
