Closes #569: & #568: cr + added PublishedFilesChart

--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -1265,10 +1265,12 @@ metrics.month-9=Wrzesie\u0144
 metrics.month-10=Pa\u017Adziernik
 metrics.month-11=Listopad
 metrics.month-12=Grudzie\u0144
-metrics.chart.legend.label.publishedDatasets=Zbiory danych
-metrics.chart.legend.label.authenticatedUsers=U\u017Cytkownicy
-metrics.chart.title.publishedDatasets=Nowe zbiory danych
-metrics.chart.title.authenticatedUsers=Nowi u\u017Cytkownicy
+metrics.chart.legend.publishedDatasets.label=Zbiory danych
+metrics.chart.legend.publishedFiles.label=Pliki
+metrics.chart.legend.authenticatedUsers.label=U\u017Cytkownicy
+metrics.chart.publishedDatasets.title=Nowe zbiory danych
+metrics.chart.publishedFiles.title=Nowe pliki
+metrics.chart.authenticatedUsers.title=Nowi u\u017Cytkownicy
 metrics.month=Miesi\u0105c
 metrics.year=Rok
 metrics.permonth=Miesi\u0119cznie
