--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -1263,10 +1263,12 @@ metrics.month-9=September
 metrics.month-10=October
 metrics.month-11=November
 metrics.month-12=December
-metrics.chart.legend.label.publishedDatasets=Datasets
-metrics.chart.legend.label.authenticatedUsers=Users
-metrics.chart.title.publishedDatasets=New datasets
-metrics.chart.title.authenticatedUsers=New users
+metrics.chart.legend.publishedDatasets.label=Datasets
+metrics.chart.legend.publishedFiles.label=Files
+metrics.chart.legend.authenticatedUsers.label=Users
+metrics.chart.publishedDatasets.title=Published Datasets
+metrics.chart.publishedFiles.title=Published Files
+metrics.chart.authenticatedUsers.title=New Users
 metrics.month=Month
 metrics.year=Year
 metrics.permonth=Per month
