Closes #559: Assigning embargo on dataset

--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -1226,6 +1226,7 @@ dataset.editBtn.itemLabel.selectGuestbook=Select Guestbook
 dataset.editBtn.itemLabel.permissions=Permissions
 dataset.editBtn.itemLabel.thumbnailsAndWidgets=Thumbnails + Widgets
 dataset.editBtn.itemLabel.privateUrl=Private URL
+dataset.editBtn.itemLabel.embargo=Embargo
 dataset.editBtn.itemLabel.permissionsDataset=Dataset
 dataset.editBtn.itemLabel.permissionsFile=Restricted Files
 dataset.editBtn.itemLabel.deleteDataset=Delete Dataset
@@ -1439,6 +1440,16 @@ dataset.privateurl.roleassigeeTitle=Private URL Enabled
 dataset.privateurl.createdSuccess=Success!
 dataset.privateurl.disabledSuccess=You have successfully disabled the Private URL for this dataset.
 dataset.privateurl.noPermToCreate=To create a Private URL you must have the following permissions: {0}.
+dataset.embargo.header=Dataset Embargo Date
+dataset.embargo.tip=Hide files in your dataset until embargo date.
+dataset.embargo.message=Currently embargo is set to : {0}
+dataset.embargo.setEmbargo=Set embargo
+dataset.embargo.removeEmbargo=Lift embargo
+dataset.embargo.removeConfirmationText=Are you sure you want to lift the Embargo? All users will be able to see files in your dataset.
+dataset.embargo.removeEmbargoConfirm=Yes, Lift Embargo
+dataset.embargo.save.successMessage=Embargo date has been successfully updated.
+dataset.embargo.save.failureMessage=Embargo date has not been saved. Operation failed.
+dataset.embargo.save.validationfailureMessage=Embargo date must be set to future date
 file.count.one=1 File
 file.count={0} to {1} of {2} {2, choice, 0#Files|1#File|2#Files}
 file.count.shown={0} {0, choice, 0#Files Selected|1#File|2#Files}
