--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -1228,6 +1228,7 @@ dataset.editBtn.itemLabel.selectGuestbook=Przypisz Ksi\u0119g\u0119 Go\u015Bci
 dataset.editBtn.itemLabel.permissions=Uprawnienia
 dataset.editBtn.itemLabel.thumbnailsAndWidgets=Miniaturka + Wid\u017Cety
 dataset.editBtn.itemLabel.privateUrl=Prywatny adres URL
+dataset.editBtn.itemLabel.embargo=Embargo
 dataset.editBtn.itemLabel.permissionsDataset=Zbi\u00F3r danych
 dataset.editBtn.itemLabel.permissionsFile=Zastrze\u017Cone pliki
 dataset.editBtn.itemLabel.deleteDataset=Usu\u0144 zbi\u00F3r danych
@@ -1440,6 +1441,16 @@ dataset.privateurl.roleassigeeTitle=Prywatny URL
 dataset.privateurl.createdSuccess=Operacja zako\u0144czona powodzeniem.
 dataset.privateurl.disabledSuccess=Uda\u0142o Ci si\u0119 dezaktywowa\u0107 prywatny URL tego zbioru danych.
 dataset.privateurl.noPermToCreate=Aby stworzy\u0107 prywatny URL, musisz mie\u0107 nast\u0119puj\u0105ce uprawnienia: {0}.
+dataset.embargo.header=Data embarga zbioru danych
+dataset.embargo.tip=Ukryj pliki w opublikowanym zbiorze danych do daty embarga.
+dataset.embargo.message=Zapisane embargo przypada na dat\u0119 : {0}
+dataset.embargo.setEmbargo=Na\u0142\u00F3\u017C embargo
+dataset.embargo.removeEmbargo=Zdejmij embargo
+dataset.embargo.removeConfirmationText=Czy na pewno chcesz zdj\u0105\u0107 embargo? Pliki w Twoim zbiorze danych b\u0119d\u0105 widoczne dla wszystkich u\u017Cytkownik\u00F3w.
+dataset.embargo.removeEmbargoConfirm=Tak, zdejmij embargo
+dataset.embargo.save.successMessage=Embargo zosta\u0142o zaktualizowane w zbiorze danych
+dataset.embargo.save.failureMessage=Nie uda\u0142o si\u0119 na\u0142o\u017Cy\u0107 embarga na zbi\u00F3r danych. Operacja zako\u0144czona niepowodzeniem.
+dataset.embargo.save.validationfailureMessage=Data embarga musi by\u0107 dat\u0105 w przysz\u0142o\u015Bci
 file.count.one=1 Plik
 file.count={0} do {1} z {2} {2,choice,0#Plik\u00F3w|1#Pliku|1<Plik\u00F3w}
 file.count.shown={0} {0,choice,0#wybranych plik\u00F3w|1#Plik|1<Pliki|4<Plik\u00F3w}
