Closes #559: before adding interceptor

--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -1440,9 +1440,12 @@ dataset.privateurl.roleassigeeTitle=Private URL Enabled
 dataset.privateurl.createdSuccess=Success!
 dataset.privateurl.disabledSuccess=You have successfully disabled the Private URL for this dataset.
 dataset.privateurl.noPermToCreate=To create a Private URL you must have the following permissions: {0}.
+dataset.embargo.title=Embargo
+dataset.embargo.description=Date for making published dataset files available.
 dataset.embargo.header=Dataset Embargo Date
 dataset.embargo.tip=Hide files in your dataset until embargo date.
 dataset.embargo.message=Currently embargo is set to : {0}
+dataset.embargo.filesTab.message.empty=Files will be accessible from: {0}
 dataset.embargo.setEmbargo=Set embargo
 dataset.embargo.removeEmbargo=Lift embargo
 dataset.embargo.removeConfirmationText=Are you sure you want to lift the Embargo? All users will be able to see files in your dataset.
