--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -1441,9 +1441,12 @@ dataset.privateurl.roleassigeeTitle=Prywatny URL
 dataset.privateurl.createdSuccess=Operacja zako\u0144czona powodzeniem.
 dataset.privateurl.disabledSuccess=Uda\u0142o Ci si\u0119 dezaktywowa\u0107 prywatny URL tego zbioru danych.
 dataset.privateurl.noPermToCreate=Aby stworzy\u0107 prywatny URL, musisz mie\u0107 nast\u0119puj\u0105ce uprawnienia: {0}.
+dataset.embargo.title=Embargo
+dataset.embargo.description=Data udost\u0119pnienia plik\u00F3w w opublikowanym zbiorze danych.
 dataset.embargo.header=Data embarga zbioru danych
 dataset.embargo.tip=Ukryj pliki w opublikowanym zbiorze danych do daty embarga.
 dataset.embargo.message=Zapisane embargo przypada na dat\u0119 : {0}
+dataset.embargo.filesTab.message.empty=Pliki b\u0119d\u0105 dost\u0119pne od dnia: {0}
 dataset.embargo.setEmbargo=Na\u0142\u00F3\u017C embargo
 dataset.embargo.removeEmbargo=Zdejmij embargo
 dataset.embargo.removeConfirmationText=Czy na pewno chcesz zdj\u0105\u0107 embargo? Pliki w Twoim zbiorze danych b\u0119d\u0105 widoczne dla wszystkich u\u017Cytkownik\u00F3w.
