--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -1445,7 +1445,7 @@ dataset.embargo.description=Date for making published dataset files available.
 dataset.embargo.header=Dataset Embargo Date
 dataset.embargo.tip=Hide files in your dataset until embargo date.
 dataset.embargo.message=Currently embargo is set to : {0}
-dataset.embargo.filesTab.message.empty=Files will be accessible from: {0}
+dataset.embargo.filesTab.message.empty=Files will be available from: {0}
 dataset.embargo.setEmbargo=Set embargo
 dataset.embargo.removeEmbargo=Lift embargo
 dataset.embargo.removeConfirmationText=Are you sure you want to lift the Embargo? All users will be able to see files in your dataset.
