Closes #559: still no interceptor, refactored both service and page. Embargo logic changed as well.

--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -1448,12 +1448,17 @@ dataset.embargo.tip=Ukryj pliki w opublikowanym zbiorze danych do daty embarga.
 dataset.embargo.message=Zapisane embargo przypada na dat\u0119 : {0}
 dataset.embargo.filesTab.message.empty=Pliki b\u0119d\u0105 dost\u0119pne od dnia: {0}
 dataset.embargo.setEmbargo=Na\u0142\u00F3\u017C embargo
-dataset.embargo.removeEmbargo=Zdejmij embargo
-dataset.embargo.removeConfirmationText=Czy na pewno chcesz zdj\u0105\u0107 embargo? Pliki w Twoim zbiorze danych b\u0119d\u0105 widoczne dla wszystkich u\u017Cytkownik\u00F3w.
-dataset.embargo.removeEmbargoConfirm=Tak, zdejmij embargo
-dataset.embargo.save.successMessage=Embargo zosta\u0142o zaktualizowane w zbiorze danych
+dataset.embargo.lift.button=Zdejmij embargo
+dataset.embargo.lift.confirmButton=Tak, zdejmij embargo
+dataset.embargo.lift.confirmationText=Czy na pewno chcesz zdj\u0105\u0107 embargo? Pliki w Twoim zbiorze danych b\u0119d\u0105 widoczne dla wszystkich u\u017Cytkownik\u00F3w.
+dataset.embargo.lift.publishedConfirmationText=Once you lift the embargo, you will not be able to set it again.
+dataset.embargo.lift.successMessage=Embargo zosta\u0142o zdj\u0119te w zbiorze danych
+dataset.embargo.lift.failureMessage=Nie uda\u0142o si\u0119 zdj\u0105\u0107 embarga w zbiorze danych. Operacja zako\u0144czona niepowodzeniem.
+dataset.embargo.save.successMessage=Embargo zosta\u0142o na\u0142o\u017Cone w zbiorze danych
 dataset.embargo.save.failureMessage=Nie uda\u0142o si\u0119 na\u0142o\u017Cy\u0107 embarga na zbi\u00F3r danych. Operacja zako\u0144czona niepowodzeniem.
-dataset.embargo.save.validationfailureMessage=Data embarga musi by\u0107 dat\u0105 w przysz\u0142o\u015Bci
+dataset.embargo.validate.min.failureMessage=Data embarga musi by\u0107 dat\u0105 w przysz\u0142o\u015Bci
+dataset.embargo.validate.max.failureMessage=Data embarga nie mo\u017Ce by\u0107 wi\u0119ksza ni\u017C {0}.
+dataset.embargo.validate.max.message=Embargo mo\u017Ce by\u0107 aktywne prze maksymalnie {0} miesi\u0119cy.
 file.count.one=1 Plik
 file.count={0} do {1} z {2} {2,choice,0#Plik\u00F3w|1#Pliku|1<Plik\u00F3w}
 file.count.shown={0} {0,choice,0#wybranych plik\u00F3w|1#Plik|1<Pliki|4<Plik\u00F3w}
