--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -419,6 +419,15 @@ dashboard.card.harvestingserver.sets={0, choice, 0#Sets|1#Set|2#Sets}
 dashboard.card.harvestingserver.btn.manage=Manage Server
 dashboard.card.metadataexport.header=Metadata Export
 dashboard.card.metadataexport.message=Dataset metadata export is only available through the {0} API. Learn more in the {0} {1}API Guide{2}.
+dashboard.card.maximumembargo.header=Maximum Embargo Length 
+dashboard.card.maximumembargo.months=Months
+dashboard.card.maximumembargo.manage=Manage Maximum Embargo
+dashboard.card.maximumembargo.checkbox.message=Set limit for maximum embargo length
+dashboard.card.maximumembargo.input.label=Number of months: 
+dashboard.card.maximumembargo.save.success=Maximum embargo length has been successfully saved.
+dashboard.card.maximumembargo.save.failure=Maximum embargo length has not been saved.
+dashboard.card.maximumembargo.notSet.header=Not Set
+dashboard.card.maximumembargo.notSet.text=Unlimited
 
 #dasboard-licenses.xhtml
 dashboard.license.header=Licenses
@@ -1441,6 +1450,7 @@ dataset.privateurl.createdSuccess=Success!
 dataset.privateurl.disabledSuccess=You have successfully disabled the Private URL for this dataset.
 dataset.privateurl.noPermToCreate=To create a Private URL you must have the following permissions: {0}.
 dataset.embargo.title=Embargo
+dataset.embargo.calendar.label=Embargo date picker
 dataset.embargo.description=Date for making published dataset files available.
 dataset.embargo.header=Dataset Embargo Date
 dataset.embargo.tip=Hide files in your dataset until embargo date.
@@ -1456,7 +1466,7 @@ dataset.embargo.lift.failureMessage=Embargo date has not been set. Operation fai
 dataset.embargo.save.successMessage=Embargo date has been successfully set.
 dataset.embargo.save.failureMessage=Embargo date has not been set. Operation failed.
 dataset.embargo.validate.min.failureMessage=Embargo date must be set to future date
-dataset.embargo.validate.max.failureMessage=Embargo date must be set before {0}.
+dataset.embargo.validate.max.failureMessage=Maximum embargo date is {0}.
 dataset.embargo.validate.max.message=Embargo can be active for maximum {0} months.
 file.count.one=1 File
 file.count={0} to {1} of {2} {2, choice, 0#Files|1#File|2#Files}
