--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -418,6 +418,15 @@ dashboard.card.harvestingserver.sets={0,choice,0#Zbior\u00F3w|1#Zbi\u00F3r|1<Zbi
 dashboard.card.harvestingserver.btn.manage=Zarz\u0105dzaj serwerem
 dashboard.card.metadataexport.header=Eksport metadanych
 dashboard.card.metadataexport.message=Eksport metadanych zbioru danych jest dost\u0119pny tylko za po\u015Brednictwem API {0}. Dowiedz si\u0119 wi\u0119cej z {1}"Poradnika API"{2} w {0}.
+dashboard.card.maximumembargo.header=Maksymalna d\u0142ugo\u015B\u0107 embarga
+dashboard.card.maximumembargo.months=Miesi\u0119cy
+dashboard.card.maximumembargo.manage=Zarz\u0105dzaj d\u0142ugo\u015Bci\u0105 embarga
+dashboard.card.maximumembargo.checkbox.message=Na\u0142\u00F3\u017C ograniczenie na maksymaln\u0105 d\u0142ugo\u015B\u0107 embarga
+dashboard.card.maximumembargo.input.label=Liczba miesi\u0119cy: 
+dashboard.card.maximumembargo.save.success=Maksymalna d\u0142ugo\u015B\u0107 embarga zosta\u0142a zaktualizowa.
+dashboard.card.maximumembargo.save.failure=Maksymalna d\u0142ugo\u015B\u0107 embarga nie zosta\u0142a zaktualizowa.
+dashboard.card.maximumembargo.notSet.header=Nie ustawiona
+dashboard.card.maximumembargo.notSet.text=Bez limitu
 
 #dasboard-licenses.xhtml
 dashboard.license.header=Licencje
@@ -1442,6 +1451,7 @@ dataset.privateurl.createdSuccess=Operacja zako\u0144czona powodzeniem.
 dataset.privateurl.disabledSuccess=Uda\u0142o Ci si\u0119 dezaktywowa\u0107 prywatny URL tego zbioru danych.
 dataset.privateurl.noPermToCreate=Aby stworzy\u0107 prywatny URL, musisz mie\u0107 nast\u0119puj\u0105ce uprawnienia: {0}.
 dataset.embargo.title=Embargo
+dataset.embargo.calendar.label=Embargo wybieracz dat
 dataset.embargo.description=Data udost\u0119pnienia plik\u00F3w w opublikowanym zbiorze danych.
 dataset.embargo.header=Data embarga zbioru danych
 dataset.embargo.tip=Ukryj pliki w opublikowanym zbiorze danych do daty embarga.
