--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -1449,25 +1449,27 @@ dataset.privateurl.roleassigeeTitle=Private URL Enabled
 dataset.privateurl.createdSuccess=Success!
 dataset.privateurl.disabledSuccess=You have successfully disabled the Private URL for this dataset.
 dataset.privateurl.noPermToCreate=To create a Private URL you must have the following permissions: {0}.
-dataset.embargo.title=Embargo
-dataset.embargo.calendar.label=Embargo date picker
-dataset.embargo.description=Date for making published dataset files available.
-dataset.embargo.header=Dataset Embargo Date
-dataset.embargo.tip=Hide files in your dataset until embargo date.
-dataset.embargo.message=Currently embargo is set to : {0}
-dataset.embargo.filesTab.message.empty=Files will be available from: {0}
-dataset.embargo.setEmbargo=Set embargo
+dataset.embargo.datasetSummary.title=Embargo
+dataset.embargo.datasetSummary.tip=In an embargoed dataset files remain temporarily unavailable.
+dataset.embargo.datasetSummary.message=Files in this dataset will be available from {0}.
+dataset.embargo.calendar.label=Embargo end date (YYYY-MM-DD):
+dataset.embargo.calendar.label.tip=The first day when files in this dataset will be available.
+dataset.embargo.header=Embargo
+dataset.embargo.description.message=You can delay sharing files in this dataset by setting an embargo.
+dataset.embargo.message=According to the current settings, files in this dataset will be available from {0}.
+dataset.embargo.max.message=The maximum allowable length of the embargo period is {0} months.
+dataset.embargo.filesTab.message.empty=This dataset is under embargo. Files in this dataset will be available from {0}.
+dataset.embargo.set.button=Set embargo end date
 dataset.embargo.lift.button=Lift embargo
-dataset.embargo.lift.confirmButton=Yes, Lift Embargo
+dataset.embargo.lift.confirmButton=Yes, lift the embargo
 dataset.embargo.lift.confirmationText=Are you sure you want to lift the embargo? 
 dataset.embargo.lift.publishedConfirmationText=Once you lift the embargo, you will not be able to set it again.
-dataset.embargo.lift.successMessage=Embargo date has been successfully lifted.
-dataset.embargo.lift.failureMessage=Embargo date has not been set. Operation failed.
-dataset.embargo.save.successMessage=Embargo date has been successfully set.
-dataset.embargo.save.failureMessage=Embargo date has not been set. Operation failed.
-dataset.embargo.validate.min.failureMessage=Embargo date must be set to future date
-dataset.embargo.validate.max.failureMessage=Maximum embargo date is {0}.
-dataset.embargo.validate.max.message=Embargo can be active for maximum {0} months.
+dataset.embargo.lift.successMessage=The embargo has been successfully lifted.
+dataset.embargo.lift.failureMessage=The embargo has not been lifted. Operation failed.
+dataset.embargo.save.successMessage=The embargo end date has been successfully set.
+dataset.embargo.save.failureMessage=The embargo end date has not been set. Operation failed.
+dataset.embargo.validate.min.failureMessage=The embargo end date must be a future date.
+dataset.embargo.validate.max.failureMessage=The embargo period exceeds the maximum allowable length of {0} months.
 file.count.one=1 File
 file.count={0} to {1} of {2} {2, choice, 0#Files|1#File|2#Files}
 file.count.shown={0} {0, choice, 0#Files Selected|1#File|2#Files}
