Closes #605: Changes in metrics charts

--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -420,14 +420,14 @@ dashboard.card.harvestingserver.btn.manage=Manage Server
 dashboard.card.metadataexport.header=Metadata Export
 dashboard.card.metadataexport.message=Dataset metadata export is only available through the {0} API. Learn more in the {0} {1}API Guide{2}.
 dashboard.card.maximumembargo.header=Maximum Embargo Length 
-dashboard.card.maximumembargo.months=Months
-dashboard.card.maximumembargo.manage=Manage Maximum Embargo
-dashboard.card.maximumembargo.checkbox.message=Set limit for maximum embargo length
+dashboard.card.maximumembargo.months=Month{0,choice,1#|1<s}
+dashboard.card.maximumembargo.manage=Manage Embargo
+dashboard.card.maximumembargo.checkbox.message=Set maximum embargo length
 dashboard.card.maximumembargo.input.label=Number of months: 
-dashboard.card.maximumembargo.save.success=Maximum embargo length has been successfully saved.
-dashboard.card.maximumembargo.save.failure=Maximum embargo length has not been saved.
+dashboard.card.maximumembargo.save.success=Maximum embargo length settings have been successfully saved.
+dashboard.card.maximumembargo.save.failure=Maximum embargo length settings have not been saved.
 dashboard.card.maximumembargo.notSet.header=Not Set
-dashboard.card.maximumembargo.notSet.text=Unlimited
+dashboard.card.maximumembargo.notSet.text=No Maximum
 
 #dasboard-licenses.xhtml
 dashboard.license.header=Licenses
