--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -419,14 +419,14 @@ dashboard.card.harvestingserver.btn.manage=Zarz\u0105dzaj serwerem
 dashboard.card.metadataexport.header=Eksport metadanych
 dashboard.card.metadataexport.message=Eksport metadanych zbioru danych jest dost\u0119pny tylko za po\u015Brednictwem API {0}. Dowiedz si\u0119 wi\u0119cej z {1}"Poradnika API"{2} w {0}.
 dashboard.card.maximumembargo.header=Maksymalna d\u0142ugo\u015B\u0107 embarga
-dashboard.card.maximumembargo.months=Miesi\u0119cy
-dashboard.card.maximumembargo.manage=Zarz\u0105dzaj d\u0142ugo\u015Bci\u0105 embarga
-dashboard.card.maximumembargo.checkbox.message=Na\u0142\u00F3\u017C ograniczenie na maksymaln\u0105 d\u0142ugo\u015B\u0107 embarga
+dashboard.card.maximumembargo.months={0,choice,1#Miesi\u0105c|1<Miesi\u0105ce|4<Miesi\u0119cy}
+dashboard.card.maximumembargo.manage=Zarz\u0105dzaj embargiem
+dashboard.card.maximumembargo.checkbox.message=Ustaw maksymaln\u0105 d\u0142ugos\u0107 embarga
 dashboard.card.maximumembargo.input.label=Liczba miesi\u0119cy: 
-dashboard.card.maximumembargo.save.success=Maksymalna d\u0142ugo\u015B\u0107 embarga zosta\u0142a zaktualizowa.
-dashboard.card.maximumembargo.save.failure=Maksymalna d\u0142ugo\u015B\u0107 embarga nie zosta\u0142a zaktualizowa.
-dashboard.card.maximumembargo.notSet.header=Nie ustawiona
-dashboard.card.maximumembargo.notSet.text=Bez limitu
+dashboard.card.maximumembargo.save.success=Ustawienia maksymalnej d\u0142ugo\u015Bci embarga zosta\u0142y pomy\u015Blnie zapisane.
+dashboard.card.maximumembargo.save.failure=Ustawienia maksymalnej d\u0142ugo\u015Bci embarga nie zosta\u0142y zapisane.
+dashboard.card.maximumembargo.notSet.header=Nie ustawiono
+dashboard.card.maximumembargo.notSet.text=Brak maksimum
 
 #dasboard-licenses.xhtml
 dashboard.license.header=Licencje
