Closes #619: Facets and filter translations redone.

--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -1522,7 +1522,7 @@ file.download.subset.header=Download Data Subset
 file.preview=Preview:
 file.previewMap=Preview Map:o
 file.fileName=File Name
-file.type.tabularData=Tabular Data
+file.type.tabular_data=Tabular Data
 file.originalChecksumType=Original File {0}
 file.checksum.exists.tip=A file with this checksum already exists in the dataset.
 file.selectedThumbnail=Thumbnail
@@ -2465,20 +2465,25 @@ language.pl=Polish
 ## facets
 facets.search.fieldtype.name.label=Name
 facets.search.fieldtype.description.label=Description
-facets.search.fieldtype.subject_ss.label=Subject
+facets.search.fieldtype.subject.label=Subject
 facets.search.fieldtype.dvSubject.label=Subject
 facets.search.fieldtype.affiliation_ss.label=Affiliation
 facets.search.fieldtype.dvAffiliation.label=Affiliation
-facets.search.fieldtype.fileType.label=File Type
+facets.search.fieldtype.file_type.label=File Type
 facets.search.fieldtype.fileTypeDisplay.label=File Type
 facets.search.fieldtype.fileNameWithoutExtension.label=File Name Without Extension
-facets.search.fieldtype.fileTags.label=File Tag
+facets.search.fieldtype.file_tag.label=File Tag
 facets.search.fieldtype.dsPublicationDate.label=Publication Date
 facets.search.fieldtype.variableName.label=Variable Name
 facets.search.fieldtype.variableLabel.label=Variable Label
 facets.search.fieldtype.dvCategory.label=Dataverse Category
 facets.search.fieldtype.publicationDate.label=Publication Date
 facets.search.fieldtype.publicationStatus.label=Publication Status
+facets.search.fieldtype.publicationStatus.published.label=Published
+facets.search.fieldtype.publicationStatus.unpublished.label=Unpublished
+facets.search.fieldtype.publicationStatus.draft.label=Draft
+facets.search.fieldtype.publicationStatus.in_review.label=In Review
+facets.search.fieldtype.publicationStatus.deaccessioned.label=Deaccessioned
 facets.search.fieldtype.authorName_ss.label=Author Name
 facets.search.fieldtype.dateOfDeposit_s.label=Deposit Date
 facets.search.fieldtype.dateOfDeposit_ss.label=Deposit Date
@@ -2529,8 +2534,22 @@ facets.search.fieldtype.journalVolume_ss.label=Journal Volume
 facets.search.fieldtype.journalIssue_ss.label=Journal Issue
 facets.search.fieldtype.journalPubDate_ss.label=Journal Publication Date
 facets.search.fieldtype.journalArticleType_ss.label=Type of Article
-facets.search.fieldtype.fileTypeGroupFacet.label=File Type
-facets.search.fieldtype.fileAccess.label=Access
+facets.search.fieldtype.access.label=Access
+facets.search.fieldtype.fileTypeGroupFacet.file_type.label=File Type
+facets.search.fieldtype.fileTypeGroupFacet.tabular_data.label=Tabular Data
+facets.search.fieldtype.fileTypeGroupFacet.image.label=Image
+facets.search.fieldtype.fileTypeGroupFacet.unknown.label=Unknown
+facets.search.fieldtype.fileTypeGroupFacet.document.label=Document
+facets.search.fieldtype.fileAccess.access.label=Access
+facets.search.fieldtype.fileAccess.public.label=Public
+facets.search.fieldtype.fileAccess.restricted.label=Restricted
 
 #privacy-policy.xhtml
 privacy.policy.page.title=Privacy policy
+facets.search.fieldtype.authorName.authorName.label=Author Name
+facets.search.fieldtype.publicationStatus.publicationStatus.label=Publication Status
+facets.search.fieldtype.publicationDate.publicationDate.label=Publication Date
+facets.search.fieldtype.dvCategory.dvCategory.label=Dataverse Category
+facets.search.fieldtype.subject.subject.label=Subject
+facets.search.fieldtype.dateOfDeposit.dateOfDeposit.label=Deposit Date
+dataset.email.messageSubject=
