--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -1523,7 +1523,7 @@ file.download.subset.header=Pobierz podzbi\u00F3r danych
 file.preview=Podgl\u0105d:
 file.previewMap=Podgl\u0105d mapy:
 file.fileName=Nazwa pliku
-file.type.tabularData=Dane tabelaryczne
+file.type.tabular_data=Dane tabelaryczne
 file.originalChecksumType={0} oryginalnego pliku
 file.checksum.exists.tip=Plik z tak\u0105 sum\u0105 kontroln\u0105 ju\u017C istnieje w tym zbiorze danych.
 file.selectedThumbnail=Miniaturka
@@ -2454,24 +2454,34 @@ language.pl=Polski
 ## facets
 facets.search.fieldtype.name.label=Nazwa
 facets.search.fieldtype.description.label=Opis
-facets.search.fieldtype.subject_ss.label=Obszar tematyczny
+facets.search.fieldtype.subject.label=Obszar tematyczny
+facets.search.fieldtype.subject.subject.label=Obszar tematyczny
 facets.search.fieldtype.dvSubject.label=Obszar tematyczny
 facets.search.fieldtype.affiliation_ss.label=Afiliacja
 facets.search.fieldtype.dvAffiliation.label=Afiliacja
-facets.search.fieldtype.fileType.label=Typ pliku
+facets.search.fieldtype.file_type.label=Typ pliku
 facets.search.fieldtype.fileTypeDisplay.label=Typ pliku
 facets.search.fieldtype.fileNameWithoutExtension.label=Nazwa pliku bez rozszerzenia
-facets.search.fieldtype.fileTags.label=Tag pliku
+facets.search.fieldtype.file_tag.label=Tag pliku
 facets.search.fieldtype.dsPublicationDate.label=Rok publikacji
 facets.search.fieldtype.variableName.label=Nazwa zmiennej
 facets.search.fieldtype.variableLabel.label=Etykieta zmiennej
 facets.search.fieldtype.dvCategory.label=Kategoria kolekcji
+facets.search.fieldtype.dvCategory.dvCategory.label=Kategoria kolekcji
 facets.search.fieldtype.publicationDate.label=Rok opublikowania
+facets.search.fieldtype.publicationDate.publicationDate.label=Rok opublikowania
 facets.search.fieldtype.publicationStatus.label=Status opublikowania
+facets.search.fieldtype.publicationStatus.publicationStatus.label=Status opublikowania
+facets.search.fieldtype.publicationStatus.published.label=Opublikowany
+facets.search.fieldtype.publicationStatus.unpublished.label=Nieopublikowany
+facets.search.fieldtype.publicationStatus.draft.label=Wersja robocza
+facets.search.fieldtype.publicationStatus.in_review.label=W trakcie weryfikacji
+facets.search.fieldtype.publicationStatus.deaccessioned.label=Wycofany
 facets.search.fieldtype.authorName_ss.label=Nazwisko i imi\u0119 autora
 facets.search.fieldtype.dateOfDeposit_s.label=Data zdeponowania
 #
 facets.search.fieldtype.dateOfDeposit_ss.label=Data zdeponowania
+facets.search.fieldtype.dateOfDeposit.dateOfDeposit.label=Data zdeponowania
 facets.search.fieldtype.keywordValue_ss.label=S\u0142owa kluczowe S\u0142owo kluczowe
 facets.search.fieldtype.authorAffiliation_ss.label=Autor Afiliacja
 facets.search.fieldtype.topicClassValue_ss.label=Klasyfikacja przedmiotowa Has\u0142o przedmiotowe
@@ -2519,9 +2529,17 @@ facets.search.fieldtype.journalVolume_ss.label=Czasopismo Tom
 facets.search.fieldtype.journalIssue_ss.label=Czasopismo Numer
 facets.search.fieldtype.journalPubDate_ss.label=Czasopismo Data publikacji
 facets.search.fieldtype.journalArticleType_ss.label=Typ artyku\u0142u
+facets.search.fieldtype.authorName.authorName.label=Nazwisko i imi\u0119 lub nazwa autora
 #
-facets.search.fieldtype.fileTypeGroupFacet.label=Typ pliku
-facets.search.fieldtype.fileAccess.label=Dost\u0119p
+facets.search.fieldtype.access.label=Dost\u0119p
+facets.search.fieldtype.fileTypeGroupFacet.file_type.label=Typ pliku
+facets.search.fieldtype.fileTypeGroupFacet.tabular_data.label=Dane tabelaryczne
+facets.search.fieldtype.fileTypeGroupFacet.image.label=Obraz
+facets.search.fieldtype.fileTypeGroupFacet.unknown.label=Nieznany
+facets.search.fieldtype.fileTypeGroupFacet.document.label=Dokument
+facets.search.fieldtype.fileAccess.access.label=Dost\u0119p
+facets.search.fieldtype.fileAccess.public.label=Publiczny
+facets.search.fieldtype.fileAccess.restricted.label=Ograniczony
 dataset.versionUI.published=Opublikowany
 
 
