--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -2472,7 +2472,7 @@ facets.search.fieldtype.dvAffiliation.label=Affiliation
 facets.search.fieldtype.file_type.label=File Type
 facets.search.fieldtype.fileTypeDisplay.label=File Type
 facets.search.fieldtype.fileNameWithoutExtension.label=File Name Without Extension
-facets.search.fieldtype.file_tag.label=File Tag
+facets.search.fieldtype.fileTag.label=File Tag
 facets.search.fieldtype.dsPublicationDate.label=Publication Date
 facets.search.fieldtype.variableName.label=Variable Name
 facets.search.fieldtype.variableLabel.label=Variable Label
@@ -2535,21 +2535,24 @@ facets.search.fieldtype.journalIssue_ss.label=Journal Issue
 facets.search.fieldtype.journalPubDate_ss.label=Journal Publication Date
 facets.search.fieldtype.journalArticleType_ss.label=Type of Article
 facets.search.fieldtype.access.label=Access
-facets.search.fieldtype.fileTypeGroupFacet.file_type.label=File Type
+facets.search.fieldtype.fileTypeGroupFacet.label=File Type
 facets.search.fieldtype.fileTypeGroupFacet.tabular_data.label=Tabular Data
 facets.search.fieldtype.fileTypeGroupFacet.image.label=Image
 facets.search.fieldtype.fileTypeGroupFacet.unknown.label=Unknown
 facets.search.fieldtype.fileTypeGroupFacet.document.label=Document
-facets.search.fieldtype.fileAccess.access.label=Access
+facets.search.fieldtype.fileTypeGroupFacet.text.label=Text
+facets.search.fieldtype.fileTypeGroupFacet.data.label=Data
+facets.search.fieldtype.fileTypeGroupFacet.shape.label=Shape archive
+facets.search.fieldtype.fileTypeGroupFacet.fits.label=FITS image
+facets.search.fieldtype.fileTypeGroupFacet.zip.label=ZIP archive
+facets.search.fieldtype.fileTypeGroupFacet.network_data.label=Network Data
+facets.search.fieldtype.fileAccess.label=Access
 facets.search.fieldtype.fileAccess.public.label=Public
 facets.search.fieldtype.fileAccess.restricted.label=Restricted
+facets.search.fieldtype.metadataSource.label=Metadata Source
 
 #privacy-policy.xhtml
 privacy.policy.page.title=Privacy policy
 facets.search.fieldtype.authorName.authorName.label=Author Name
-facets.search.fieldtype.publicationStatus.publicationStatus.label=Publication Status
-facets.search.fieldtype.publicationDate.publicationDate.label=Publication Date
-facets.search.fieldtype.dvCategory.dvCategory.label=Dataverse Category
-facets.search.fieldtype.subject.subject.label=Subject
-facets.search.fieldtype.dateOfDeposit.dateOfDeposit.label=Deposit Date
+facets.search.fieldtype.dateOfDeposit.label=Deposit Date
 dataset.email.messageSubject=
