--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -2455,23 +2455,19 @@ language.pl=Polski
 facets.search.fieldtype.name.label=Nazwa
 facets.search.fieldtype.description.label=Opis
 facets.search.fieldtype.subject.label=Obszar tematyczny
-facets.search.fieldtype.subject.subject.label=Obszar tematyczny
 facets.search.fieldtype.dvSubject.label=Obszar tematyczny
 facets.search.fieldtype.affiliation_ss.label=Afiliacja
 facets.search.fieldtype.dvAffiliation.label=Afiliacja
 facets.search.fieldtype.file_type.label=Typ pliku
 facets.search.fieldtype.fileTypeDisplay.label=Typ pliku
 facets.search.fieldtype.fileNameWithoutExtension.label=Nazwa pliku bez rozszerzenia
-facets.search.fieldtype.file_tag.label=Tag pliku
+facets.search.fieldtype.fileTag.label=Tag pliku
 facets.search.fieldtype.dsPublicationDate.label=Rok publikacji
 facets.search.fieldtype.variableName.label=Nazwa zmiennej
 facets.search.fieldtype.variableLabel.label=Etykieta zmiennej
 facets.search.fieldtype.dvCategory.label=Kategoria kolekcji
-facets.search.fieldtype.dvCategory.dvCategory.label=Kategoria kolekcji
 facets.search.fieldtype.publicationDate.label=Rok opublikowania
-facets.search.fieldtype.publicationDate.publicationDate.label=Rok opublikowania
 facets.search.fieldtype.publicationStatus.label=Status opublikowania
-facets.search.fieldtype.publicationStatus.publicationStatus.label=Status opublikowania
 facets.search.fieldtype.publicationStatus.published.label=Opublikowany
 facets.search.fieldtype.publicationStatus.unpublished.label=Nieopublikowany
 facets.search.fieldtype.publicationStatus.draft.label=Wersja robocza
@@ -2481,7 +2477,7 @@ facets.search.fieldtype.authorName_ss.label=Nazwisko i imi\u0119 autora
 facets.search.fieldtype.dateOfDeposit_s.label=Data zdeponowania
 #
 facets.search.fieldtype.dateOfDeposit_ss.label=Data zdeponowania
-facets.search.fieldtype.dateOfDeposit.dateOfDeposit.label=Data zdeponowania
+facets.search.fieldtype.dateOfDeposit.label=Data zdeponowania
 facets.search.fieldtype.keywordValue_ss.label=S\u0142owa kluczowe S\u0142owo kluczowe
 facets.search.fieldtype.authorAffiliation_ss.label=Autor Afiliacja
 facets.search.fieldtype.topicClassValue_ss.label=Klasyfikacja przedmiotowa Has\u0142o przedmiotowe
@@ -2532,12 +2528,18 @@ facets.search.fieldtype.journalArticleType_ss.label=Typ artyku\u0142u
 facets.search.fieldtype.authorName.authorName.label=Nazwisko i imi\u0119 lub nazwa autora
 #
 facets.search.fieldtype.access.label=Dost\u0119p
-facets.search.fieldtype.fileTypeGroupFacet.file_type.label=Typ pliku
+facets.search.fieldtype.fileTypeGroupFacet.label=Typ pliku
 facets.search.fieldtype.fileTypeGroupFacet.tabular_data.label=Dane tabelaryczne
 facets.search.fieldtype.fileTypeGroupFacet.image.label=Obraz
 facets.search.fieldtype.fileTypeGroupFacet.unknown.label=Nieznany
 facets.search.fieldtype.fileTypeGroupFacet.document.label=Dokument
-facets.search.fieldtype.fileAccess.access.label=Dost\u0119p
+facets.search.fieldtype.fileTypeGroupFacet.text.label=Tekst
+facets.search.fieldtype.fileTypeGroupFacet.data.label=Dane
+facets.search.fieldtype.fileTypeGroupFacet.shape.label=Archiwum - kszta\u0142t
+facets.search.fieldtype.fileTypeGroupFacet.fits.label=Obraz FITS
+facets.search.fieldtype.fileTypeGroupFacet.zip.label=Archiwum zip
+facets.search.fieldtype.fileTypeGroupFacet.network_data.label=Dane sieciowe
+facets.search.fieldtype.fileAccess.label=Dost\u0119p
 facets.search.fieldtype.fileAccess.public.label=Publiczny
 facets.search.fieldtype.fileAccess.restricted.label=Ograniczony
 dataset.versionUI.published=Opublikowany
@@ -2545,3 +2547,4 @@ dataset.versionUI.published=Opublikowany
 
 #privacy-policy.xhtml
 privacy.policy.page.title=Polityka prywatno\u015Bci
+facets.search.fieldtype.metadataSource.label=\u0179r\u00F3d\u0142o metadanych
