Closes #619: cr - tabular_data fix

--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -1523,7 +1523,7 @@ file.download.subset.header=Pobierz podzbi\u00F3r danych
 file.preview=Podgl\u0105d:
 file.previewMap=Podgl\u0105d mapy:
 file.fileName=Nazwa pliku
-file.type.tabular_data=Dane tabelaryczne
+file.type.tabularData=Dane tabelaryczne
 file.originalChecksumType={0} oryginalnego pliku
 file.checksum.exists.tip=Plik z tak\u0105 sum\u0105 kontroln\u0105 ju\u017C istnieje w tym zbiorze danych.
 file.selectedThumbnail=Miniaturka
