--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -1522,7 +1522,7 @@ file.download.subset.header=Download Data Subset
 file.preview=Preview:
 file.previewMap=Preview Map:o
 file.fileName=File Name
-file.type.tabular_data=Tabular Data
+file.type.tabularData=Tabular Data
 file.originalChecksumType=Original File {0}
 file.checksum.exists.tip=A file with this checksum already exists in the dataset.
 file.selectedThumbnail=Thumbnail
