--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -72,6 +72,7 @@ htmlAllowedTags=<a>, <b>, <blockquote>, <br>, <code>, <del>, <dd>, <dl>, <dt>, <
 toggleNavigation=Toggle navigation
 defaultBody=Default Body
 filter=Filter
+undo=Undo
 # dataverse_header.xhtml
 header.cookie.consent.text=Lorem ipsum dolor sit amet
 header.cookie.consent.privacy.policy.link=privacy policy
@@ -453,11 +454,12 @@ dashboard.license.editLicenseButton=Edit license
 dashboard.otherTermsOfUse.header=Other Terms Of Use
 #dashboard-licenses-reorder.xhtml
 license.reorder.pageTitle=License reorder
-license.reorder.breadcrumb=Reorder
+license.reorder.header=Reorder
 license.reorder.license.header=License
 license.reorder.actions.header=Actions
 license.reorder.moveUp=Move up
 license.reorder.moveDown=Move down
+license.reorder.lastReorder=Last performed reorder: {0} from position {1} to position {2}
 
 #harvestclients.xhtml
 harvestclients.title=Manage Harvesting Clients
@@ -1782,6 +1784,7 @@ file.requestAccess.notAllowed=Requests for access are not accepted on the Datase
 file.reorder.action.header=Actions
 file.reorder.moveUp=Move up
 file.reorder.moveDown=Move down
+file.reorder.lastReorder=Last performed reorder: {0} from position {1} to position {2}
 
 file.search.placeholder=Search this dataset...
 file.results.btn.sort=Sort
