--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -204,7 +204,7 @@ notification.dataverse.management.title=Dataverse Management - Dataverse User Gu
 notification.createDataset={0} was created in {1}. To learn more about what you can do with a dataset, check out the {2}.
 notification.dataset.management.title=Dataset Management - Dataset User Guide
 notification.wasSubmittedForReview={0} was submitted for review to be published in {1}. Don''t forget to publish it or send it back to the contributor, {2} ({3})\! {4}
-notification.wasSubmittedForReview.contributorMessage.prefix=Contributor message:
+notification.wasSubmittedForReview.contributorMessage.prefix=Message from contributor:
 notification.wasReturnedByReviewer={0} was returned by the curator of {1}. Return reason: {2}
 notification.wasPublished={0} was published in {1}.
 notification.worldMap.added={0}, dataset had WorldMap layer data added to it.
