--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -1300,11 +1300,11 @@ metrics.section.users.radiobutton.monthly.label=Number of new registered users, 
 metrics.chart.datasets.yearly.title=Number of new datasets, per year
 metrics.chart.datasets.yearlyCumulative.title=Total number of datasets
 metrics.chart.datasets.monthly.title=Number of new datasets, per month
-metrics.chart.datasets.yAxis.label=Number of datasets
+metrics.chart.datasets.yAxis.label=Datasets
 metrics.chart.files.yearly.title=Number of new files, per year
 metrics.chart.files.yearlyCumulative.title=Total number of files
 metrics.chart.files.monthly.title=Number of new files, per month
-metrics.chart.files.yAxis.label=Number of files
+metrics.chart.files.yAxis.label=Files
 metrics.chart.filesStorage.yearly.title=Size of new files, per year
 metrics.chart.filesStorage.yearlyCumulative.title=Total file size
 metrics.chart.filesStorage.monthly.title=Size of new files, per month
@@ -1312,7 +1312,7 @@ metrics.chart.filesStorage.yAxis.label=Size (MB)
 metrics.chart.users.yearly.title=Number of new registered users, per year
 metrics.chart.users.yearlyCumulative.title=Total number of registered users
 metrics.chart.users.monthly.title=Number of new registered users, per month
-metrics.chart.users.yAxis.label=Number of registered users
+metrics.chart.users.yAxis.label=Registered users
 metrics.chart.xAxis.month.label=Month
 metrics.chart.xAxis.year.label=Year
 metrics.permonth=Per month
