--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -1302,11 +1302,11 @@ metrics.section.users.radiobutton.monthly.label=Liczba nowych zarejestrowanych u
 metrics.chart.datasets.yearly.title=Liczba nowych zbior\u00F3w, rocznie
 metrics.chart.datasets.yearlyCumulative.title=\u0141\u0105czna liczba zbior\u00F3w
 metrics.chart.datasets.monthly.title=Liczba nowych zbior\u00F3w, miesi\u0119cznie
-metrics.chart.datasets.yAxis.label=Liczba zbior\u00F3w danych
+metrics.chart.datasets.yAxis.label=Zbiory danych
 metrics.chart.files.yearly.title=Liczba nowych plik\u00F3w, rocznie
 metrics.chart.files.yearlyCumulative.title=\u0141\u0105czna liczba plik\u00F3w
 metrics.chart.files.monthly.title=Liczba nowych plik\u00F3w, miesi\u0119cznie
-metrics.chart.files.yAxis.label=Liczba plik\u00F3w
+metrics.chart.files.yAxis.label=Pliki
 metrics.chart.filesStorage.yearly.title=Rozmiar nowych plik\u00F3w, rocznie
 metrics.chart.filesStorage.yearlyCumulative.title=\u0141\u0105czny rozmiar plik\u00F3w
 metrics.chart.filesStorage.monthly.title=Rozmiar nowych plik\u00F3w, miesi\u0119cznie
@@ -1314,7 +1314,7 @@ metrics.chart.filesStorage.yAxis.label=Rozmiar (MB)
 metrics.chart.users.yearly.title=Liczba nowych zarejestrowanych u\u017Cytkownik\u00F3w, rocznie
 metrics.chart.users.yearlyCumulative.title=\u0141\u0105czna liczba zarejestrowanych u\u017Cytkownik\u00F3w
 metrics.chart.users.monthly.title=Liczba nowych zarejestrowanych u\u017Cytkownik\u00F3w, miesi\u0119cznie
-metrics.chart.users.yAxis.label=Liczba zarejestrowanych u\u017Cytkownik\u00F3w
+metrics.chart.users.yAxis.label=Zarejestrowani u\u017Cytkownicy
 metrics.chart.xAxis.month.label=Miesi\u0105c
 metrics.chart.xAxis.year.label=Rok
 metrics.permonth=Miesi\u0119cznie
