--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -263,8 +263,9 @@ user.notificationsLanguage.notSupported=(Nieobs\u0142ugiwany. E-maile wysy\u0142
 user.notificationsLanguage.requiredMessage=Wybierz preferowany j\u0119zyk powiadomie\u0144.
 user.acccountterms=Regulamin serwisu
 user.acccountterms.tip=Regulamin serwisu opisuje warunki i zasady korzystania z repozytorium.
-user.consent.required=Ta zgoda jest wymagana.
+user.acccountterms.required=Zaznacz to pole, by potwierdzi\u0107, \u017Ce akceptujesz "Regulamin serwisu".
 user.acccountterms.iagree=Przeczyta\u0142am/Przeczyta\u0142em i akceptuj\u0119 "Regulamin serwisu".
+user.consent.required=Ta zgoda jest wymagana.
 user.createBtn=Utw\u00F3rz konto
 user.updatePassword.welcome=Witamy w repozytorium danych!
 user.updatePassword.warning=Wraz z udost\u0119pnieniem wersji 4.0 oprogramowania Dataverse, zmieni\u0142y si\u0119 wymogi dotycz\u0105ce hase\u0142. Poniewa\u017C korzystasz z repozytorium po raz pierwszy od czasu tej aktualizacji, musisz ustawi\u0107 nowe has\u0142o i zaakceptowa\u0107 "Regulamin serwisu".
