#735 Moved from Dataverse 4.11 and refactored

--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -2607,3 +2607,37 @@ facets.search.fieldtype.dateOfDeposit.label=Deposit Date
 
 #privacy-policy.xhtml
 privacy.policy.page.title=Privacy policy
+
+#dashboard-datamove.xhtml
+dashboard.card.datamove=Data
+dashboard.card.datamove.manage=Move Data
+dashboard.datamove.empty.fields=All fields must be filled
+dashboard.datamove.header=Dashboard - Move Data
+dashboard.datamove.message=Manage and curate your installation by moving datasets from one host dataverse to another. See also <a href="{0}/{1}/admin/dataverses-datasets.html">Managing Datasets and Dataverses</a> in the Admin Guide.
+dashboard.datamove.selectdataset.header=Dataset to Move
+dashboard.datamove.newdataverse.header=New Host Dataverse
+dashboard.datamove.dataset.label=Dataset
+dashboard.datamove.dataverse.label=Dataverse
+dashboard.datamove.confirm.dialog=Are you sure want to move this dataset?
+dashboard.datamove.confirm.yes=Yes, Move Data
+dashboard.datamove.confirm.force=Force
+dashboard.datamove.message.success=The dataset "{0}" ({1}) has been successfully moved to {2}.
+dashboard.datamove.message.failure.summary=Failed to move dataset
+dashboard.datamove.message.failure.details=The dataset <b>{0}</b> ({1}) could not be moved to <b>{2}</b>.<br>{3}<br>{4}<br>
+dashboard.datamove.dataverse.placeholder=Enter Dataverse Identifier...
+dashboard.datamove.dataverse.menu.header=Dataverse Name (Affiliate), Identifier
+dashboard.datamove.dataverse.menu.invalidMsg=No matches found
+dashboard.datamove.dataset.placeholder=Enter Dataset Persistent ID, doi:...
+dashboard.datamove.dataset.menu.header=Dataset Persistent ID, Title, Host Dataverse Identifier
+dashboard.datamove.dataset.menu.invalidMsg=No matches found
+dashboard.datamove.dataset.command.error.targetDataverseUnpublishedDatasetPublished=A published dataset may not be moved to an unpublished dataverse. You can retry the move after publishing {0}.
+dashboard.datamove.dataset.command.error.targetDataverseSameAsOriginalDataverse=This dataset is already in this dataverse.
+dashboard.datamove.dataset.command.error.datasetGuestbookNotInTargetDataverse=The guestbook would be removed from this dataset if you moved it because the guestbook is not in the new host dataverse. 
+dashboard.datamove.dataset.command.error.linkedToTargetDataverseOrOneOfItsParents=This dataset is linked to the new host dataverse or one of its parents. This move would remove the link to this dataset. 
+dashboard.datamove.dataset.command.error.indexingProblem=Dataset could not be moved. Indexing failed.
+dashboard.datamove.dataset.command.suggestForce=You can force this command by selecting <i>Force</i> checkbox. 
+dashboard.datamove.dataset.autocomplete.doi=Dataset Persistent ID
+dashboard.datamove.dataset.autocomplete.title=Title
+dashboard.datamove.dataset.autocomplete.dataverse.identifier=Host Dataverse Identifier
+dashboard.datamove.dataverse.autocomplete.name=Dataverse Name (Affiliate)
+dashboard.datamove.dataverse.autocomplete.identifier=Identifier
