--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -2600,3 +2600,37 @@ dataset.versionUI.published=Opublikowany
 
 #privacy-policy.xhtml
 privacy.policy.page.title=Polityka prywatno\u015Bci
+
+#dashboard-datamove.xhtml
+dashboard.card.datamove=Dane
+dashboard.card.datamove.manage=Przenie\u015B dane
+dashboard.datamove.header=Panel administratora \u2013 Przenie\u015B dane
+dashboard.datamove.message=Manage and curate your installation by moving datasets from one host dataverse to another. See also <a href="{0}/{1}/admin/dataverses-datasets.html">Managing Datasets and Dataverses</a> in the Admin Guide.
+dashboard.datamove.selectdataset.header=Zbi\u00F3r danych do przeniesienia
+dashboard.datamove.newdataverse.header=Kolekcja docelowa
+dashboard.datamove.dataset.label=Zbi\u00F3r danych
+dashboard.datamove.dataverse.label=Kolekcja danych
+dashboard.datamove.confirm.dialog=Czy na pewno chcesz przenie\u015B\u0107 ten zbi\u00F3r danych?
+dashboard.datamove.confirm.yes=Tak, przenie\u015B
+dashboard.datamove.message.success=Zbi\u00F3r danych "{0}" ({1}) zosta\u0142 przeniesiony do {2}.
+dashboard.datamove.message.failure.summary=Nie uda\u0142o si\u0119 przenie\u015B\u0107 zbioru danych
+dashboard.datamove.message.failure.details=The dataset <b>{0}</b> ({1}) could not be moved to <b>{2}</b>.<br>{3}<br>{4}<br>
+dashboard.datamove.dataverse.placeholder=Podaj identyfikator kolekcji danych\u2026
+dashboard.datamove.dataverse.menu.header=Nazwa kolekcji danych (Afiliacja), Identyfikator
+dashboard.datamove.dataverse.menu.invalidMsg=Nie znaleziono wynik\u00F3w
+dashboard.datamove.dataset.placeholder=Podaj Trwa\u0142y Identyfikator zbioru danych, doi:\u2026
+dashboard.datamove.dataset.menu.header=Trwa\u0142y Identyfikator zbioru danych, Nazwa, Identyfikator zawieraj\u0105cej kolekcji danych
+dashboard.datamove.dataset.autocomplete.doi=Trwa\u0142y Identyfikator zbioru danych
+dashboard.datamove.dataset.autocomplete.title=Nazwa
+dashboard.datamove.dataset.autocomplete.dataverse.identifier=Identyfikator kolekcji zawieraj\u0105cej
+dashboard.datamove.dataverse.autocomplete.name=Nazwa kolekcji danych (Afiliacja)
+dashboard.datamove.dataverse.autocomplete.identifier=Identyfikator
+dashboard.datamove.dataset.menu.invalidMsg=Nie znaleziono wynik\u00F3w
+dashboard.datamove.dataset.command.error.targetDataverseUnpublishedDatasetPublished=Opublikowany zbi\u00F3r danych nie mo\u017Ce zosta\u0107 przeniesiony do nieopublikowanej kolekcji danych. Po opublikowaniu {0} mo\u017Cna spr\u00F3bowa\u0107 ponownie.
+dashboard.datamove.dataset.command.error.targetDataverseSameAsOriginalDataverse=Ten zbi\u00F3r danych jest ju\u017C zawarty w docelowej kolekcji danych.
+dashboard.datamove.dataset.command.error.datasetGuestbookNotInTargetDataverse=PL The guestbook would be removed from this dataset if you moved it because the guestbook is not in the new host dataverse. 
+dashboard.datamove.dataset.command.error.linkedToTargetDataverseOrOneOfItsParents=PL This dataset is linked to the new host dataverse or one of its parents. This move would remove the link to this dataset. 
+dashboard.datamove.dataset.command.suggestForce=You can force this command by selecting <i>Force</i> checkbox. 
+dashboard.datamove.dataset.command.error.indexingProblem=Dataset could not be moved. Indexing failed.
+dashboard.datamove.confirm.force=Wymu\u015B
+dashboard.datamove.empty.fields=Wszystkie pola musz\u0105 by\u0107 wype\u0142nione
