--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -73,6 +73,7 @@ toggleNavigation=Prze\u0142\u0105cz panel nawigacji
 defaultBody=Domy\u015Blny obszar tre\u015Bci
 filter=Filtruj
 undo=Cofnij
+opensInNewWindow=(otwierane w nowym oknie)
 
 # dataverse_header.xhtml
 header.repod=RepOD
@@ -117,6 +118,10 @@ footer.widget.login=Zaloguj si\u0119 do
 footer.privacyPolicy=Polityka prywatno\u015Bci
 footer.poweredby=Powered by
 footer.dataverseProject=The Dataverse Project
+footer.repod=RepOD
+footer.basedOn=based on
+footer.dataverse=Dataverse
+footer.dataverse.version=4.11.
 footer.privacyPolicy.link.name=Polityka prywatno\u015Bci
 footer.termsOfUse.link.name=Regulamin serwisu
 
