--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -73,6 +73,7 @@ toggleNavigation=Toggle navigation
 defaultBody=Default Body
 filter=Filter
 undo=Undo
+opensInNewWindow=(opens in new window)
 
 # dataverse_header.xhtml
 header.repod=RepOD
@@ -117,6 +118,10 @@ footer.widget.login=Log in to
 footer.privacyPolicy=Privacy Policy
 footer.poweredby=Powered by
 footer.dataverseProject=The Dataverse Project
+footer.repod=RepOD
+footer.basedOn=based on
+footer.dataverse=Dataverse
+footer.dataverse.version=4.11.
 footer.privacyPolicy.link.name=Privacy Policy
 footer.termsOfUse.link.name=Terms of Use
 
