#735: Modified text bundles

--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -2604,33 +2604,35 @@ privacy.policy.page.title=Polityka prywatno\u015Bci
 #dashboard-datamove.xhtml
 dashboard.card.datamove=Dane
 dashboard.card.datamove.manage=Przenie\u015B dane
-dashboard.datamove.header=Panel administratora \u2013 Przenie\u015B dane
-dashboard.datamove.message=Manage and curate your installation by moving datasets from one host dataverse to another. See also <a href="{0}/{1}/admin/dataverses-datasets.html">Managing Datasets and Dataverses</a> in the Admin Guide.
-dashboard.datamove.selectdataset.header=Zbi\u00F3r danych do przeniesienia
-dashboard.datamove.newdataverse.header=Kolekcja docelowa
+dashboard.datamove.empty.fields=Wszystkie pola s\u0105 wymagane.
+dashboard.datamove.header=Panel administratora - Przenie\u015B dane
+dashboard.datamove.message=Zarz\u0105dzaj danymi w repozytorium przenosz\u0105c zbiory i kolekcje do innych kolekcji. Odwied\u017A r\u00F3wnie\u017C sekcj\u0119 <a href={0}/{1}/admin/dataverses-datasets.html>Zarz\u0105dzanie zbiorami danych i kolekcjami</a> w "Podr\u0119czniku administratora".
+dashboard.datamove.button.move=Przenie\u015B zbi\u00F3r danych
+dashboard.datamove.selectdataset.header=Przenoszony zbi\u00F3r danych
+dashboard.datamove.newdataverse.header=Nowa kolekcja nadrz\u0119dna
 dashboard.datamove.dataset.label=Zbi\u00F3r danych
-dashboard.datamove.dataverse.label=Kolekcja danych
+dashboard.datamove.dataverse.label=Kolekcja
 dashboard.datamove.confirm.dialog=Czy na pewno chcesz przenie\u015B\u0107 ten zbi\u00F3r danych?
-dashboard.datamove.confirm.yes=Tak, przenie\u015B
-dashboard.datamove.message.success=Zbi\u00F3r danych "{0}" ({1}) zosta\u0142 przeniesiony do {2}.
-dashboard.datamove.message.failure.summary=Nie uda\u0142o si\u0119 przenie\u015B\u0107 zbioru danych
-dashboard.datamove.message.failure.details=The dataset <b>{0}</b> ({1}) could not be moved to <b>{2}</b>.<br>{3}<br>{4}<br>
-dashboard.datamove.dataverse.placeholder=Podaj identyfikator kolekcji danych\u2026
-dashboard.datamove.dataverse.menu.header=Nazwa kolekcji danych (Afiliacja), Identyfikator
-dashboard.datamove.dataverse.menu.invalidMsg=Nie znaleziono wynik\u00F3w
-dashboard.datamove.dataset.placeholder=Podaj Trwa\u0142y Identyfikator zbioru danych, doi:\u2026
-dashboard.datamove.dataset.menu.header=Trwa\u0142y Identyfikator zbioru danych, Nazwa, Identyfikator zawieraj\u0105cej kolekcji danych
-dashboard.datamove.dataset.autocomplete.doi=Trwa\u0142y Identyfikator zbioru danych
-dashboard.datamove.dataset.autocomplete.title=Nazwa
-dashboard.datamove.dataset.autocomplete.dataverse.identifier=Identyfikator kolekcji zawieraj\u0105cej
-dashboard.datamove.dataverse.autocomplete.name=Nazwa kolekcji danych (Afiliacja)
+dashboard.datamove.confirm.yes=Tak, przenie\u015B zbi\u00F3r danych
+dashboard.datamove.confirm.no=Nie, anuluj
+dashboard.datamove.confirm.force=Wymu\u015B przeniesienie
+dashboard.datamove.message.success=Zbi\u00F3r danych "{0}" ({1}) zosta\u0142 pomy\u015Blnie przeniesiony do kolekcji "{2}".
+dashboard.datamove.message.failure.summary=Przeniesienie zbioru danych nie powiod\u0142o si\u0119.
+dashboard.datamove.message.failure.details=Zbi\u00F3r danych "{0}" ({1}) nie m\u00F3g\u0142 zosta\u0107 przeniesiony do kolekcji "{2}". <br>{3}<br>{4}<br>
+dashboard.datamove.dataverse.placeholder=Wprowad\u017A identyfikator kolekcji...
+dashboard.datamove.dataset.placeholder=Wprowad\u017A trwa\u0142y identyfikator zbioru danych: doi:..., hdl:...
+dashboard.datamove.dataset.menu.header=Trwa\u0142y identyfikator zbioru danych, Tytu\u0142, Identyfikator kolekcji nadrz\u0119dnej
+dashboard.datamove.dataverse.menu.header=Nazwa kolekcji (Afiliacja) Identyfikator
+dashboard.datamove.dataset.autocomplete.doi=Trwa\u0142y identyfikator zbioru danych
+dashboard.datamove.dataset.autocomplete.title=Tytu\u0142
+dashboard.datamove.dataset.autocomplete.dataverse.identifier=Identyfikator kolekcji nadrz\u0119dnej
+dashboard.datamove.dataverse.autocomplete.name=Nazwa kolekcji (Afiliacja)
 dashboard.datamove.dataverse.autocomplete.identifier=Identyfikator
-dashboard.datamove.dataset.menu.invalidMsg=Nie znaleziono wynik\u00F3w
-dashboard.datamove.dataset.command.error.targetDataverseUnpublishedDatasetPublished=Opublikowany zbi\u00F3r danych nie mo\u017Ce zosta\u0107 przeniesiony do nieopublikowanej kolekcji danych. Po opublikowaniu {0} mo\u017Cna spr\u00F3bowa\u0107 ponownie.
-dashboard.datamove.dataset.command.error.targetDataverseSameAsOriginalDataverse=Ten zbi\u00F3r danych jest ju\u017C zawarty w docelowej kolekcji danych.
-dashboard.datamove.dataset.command.error.datasetGuestbookNotInTargetDataverse=PL The guestbook would be removed from this dataset if you moved it because the guestbook is not in the new host dataverse. 
-dashboard.datamove.dataset.command.error.linkedToTargetDataverseOrOneOfItsParents=PL This dataset is linked to the new host dataverse or one of its parents. This move would remove the link to this dataset. 
-dashboard.datamove.dataset.command.suggestForce=You can force this command by selecting <i>Force</i> checkbox. 
-dashboard.datamove.dataset.command.error.indexingProblem=Dataset could not be moved. Indexing failed.
-dashboard.datamove.confirm.force=Wymu\u015B
-dashboard.datamove.empty.fields=Wszystkie pola musz\u0105 by\u0107 wype\u0142nione
+dashboard.datamove.dataset.menu.invalidMsg=Nie znaleziono pasuj\u0105cych zbior\u00F3w danych.
+dashboard.datamove.dataverse.menu.invalidMsg=Nie znaleziono pasuj\u0105cych kolekcji.
+dashboard.datamove.dataset.command.error.targetDataverseUnpublishedDatasetPublished=Opublikowany zbi\u00F3r danych nie mo\u017Ce zosta\u0107 przeniesiony do nieopublikowanej kolekcji. Mo\u017Cesz spr\u00F3bowa\u0107 przenie\u015B\u0107 go ponownie po opublikowaniu kolekcji "{0}".
+dashboard.datamove.dataset.command.error.targetDataverseSameAsOriginalDataverse=Ten zbi\u00F3r danych znajduje si\u0119 ju\u017C w tej kolekcji.
+dashboard.datamove.dataset.command.error.datasetGuestbookNotInTargetDataverse=Je\u015Bli przeniesiesz ten zbi\u00F3r danych, ksi\u0119ga go\u015Bci zostanie z niego usuni\u0119ta, poniewa\u017C nie znajduje si\u0119 ona w nowej kolekcji nadrz\u0119dnej.
+dashboard.datamove.dataset.command.error.linkedToTargetDataverseOrOneOfItsParents=Ten zbi\u00F3r danych jest przypi\u0119ty do nowej kolekcji nadrz\u0119dnej lub kt\u00F3rej\u015B z kolekcji wy\u017Cszego rz\u0119du. Przeniesienie zbioru danych spowoduje jego odpi\u0119cie.
+dashboard.datamove.dataset.command.error.indexingProblem=Zbi\u00F3r danych nie m\u00F3g\u0142 zosta\u0107 przeniesiony. Indeksowanie nie powiod\u0142o si\u0119.
+dashboard.datamove.dataset.command.suggestForce=Mo\u017Cesz wymusi\u0107 to polecenie zaznaczaj\u0105c opcj\u0119 "Wymu\u015B przeniesienie".
